fix(css): Fix CSS/@layer try-it: make text-align effect visible (#2519)
* unset #html-output width

to make text-align visible

* replace CSS/@layer try-it example

text-align effect is not visible int the actual try-it box, replace with border as per suggestion in #2519

--- a/live-examples/css-examples/cascading-and-inheritance/at-rule-layer.css
+++ b/live-examples/css-examples/cascading-and-inheritance/at-rule-layer.css
@@ -5,13 +5,13 @@
         background-color: brown;
     }
     p {
-        text-align: right;
+        border: medium solid limegreen;
     }
 }
 
 @layer module {
     .alert {
-        text-align: left;
+        border: medium solid violet;
         background-color: yellow;
         color: white;
     }
